--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vuttr-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "VUTTR Api",
+  "author": "Ahlan Guarnier",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
